--- a/countriesGrid.html
+++ b/countriesGrid.html
@@ -21,7 +21,7 @@
         </div>
         <div data-role="tile" data-size="wide" style="background-color: #00309a;" onclick="goToPage('Euro/euro.html')">
             <span class="badge-top">9</span>
-            <img src="euro/flag.png" class="icon">
+            <img src="Euro/flag.png" class="icon">
             <span class="branding-bar">Europe</span>
         </div>
         <div data-role="tile" data-size="wide" style="background-color: #cd0000;" onclick="goToPage('Ringgit/malay.html')">
