--- a/Thailand/thailand.html
+++ b/Thailand/thailand.html
@@ -9,7 +9,7 @@
 <body>
     <div class="navbar">
         <a href="../home.html">Home</a>
-        <a class="active" href="immersiveCoinPage.html">Coins by Country</a>
+        <a class="active" href="../immersiveCoinPage.html">Coins by Country</a>
     </div>
     <header>
         Thailand
