--- a/USA/usa.html
+++ b/USA/usa.html
@@ -10,7 +10,7 @@
 <body>
     <div class="navbar">
         <a href="../home.html">Home</a>
-        <a class="active" href="immersiveCoinPage.html">Coins by Country</a>
+        <a class="active" href="../immersiveCoinPage.html">Coins by Country</a>
     </div>
     <header>
         United States of America
