--- a/Ringgit/malay.html
+++ b/Ringgit/malay.html
@@ -21,7 +21,7 @@
     <div class="row">
         <div class="column">
             <div class="card">
-                <img src="_DSC0004.JPG" style="width:100%">
+                <img src="https://raw.githubusercontent.com/coinerapp/coinerapp.github.io/master/Ringgit/_DSC0004.JPG" style="width:100%">
                 <div class="container">
                     <h2>Malaysian Ringgit - 5 Sen - Back</h2>
                     <p class="title">This weighs 1.72 grams and measures 17.78mm across</p>
