--- a/Ringgit/malay.html
+++ b/Ringgit/malay.html
@@ -32,7 +32,7 @@
         </div>
         <div class="column">
             <div class="card">
-                <img src="https://raw.githubusercontent.com/coinerapp/coinerapp.github.io/master/Ringgit/_DSC0004.JPG" style="width:100%">
+                <img src="https://github.com/coinerapp/coinerapp.github.io/blob/master/Ringgit/_DSC0005.jpg?raw=true" style="width:100%">
                 <div class="container">
                     <h2>Malaysian Ringgit - 5 Sen - Front</h2>
                     <p class="title">2011 - 2019</p>
