--- a/Canada/canada.html
+++ b/Canada/canada.html
@@ -4,6 +4,7 @@
 <head>
     <link rel="stylesheet" href="../style.css">
     <title>Canada - Coin Collection</title>
+     <link rel="shortcut icon" href="https://i.imgur.com/SSkeKDJ.png">
 </head>
 
 <body>
