--- a/Euro/euro.html
+++ b/Euro/euro.html
@@ -4,6 +4,8 @@
 <head>
     <link rel="stylesheet" href="../style.css">
     <title>Europe - Coin Collection</title>
+        <link rel="shortcut icon" href="https://i.imgur.com/SSkeKDJ.png">
+
 
 </head>
 
