--- a/Singapore/singapore.html
+++ b/Singapore/singapore.html
@@ -3,7 +3,9 @@
 
 <head>
     <link rel="stylesheet" href="../style.css">
-    <title>Singapore - Coin Collection</title>
+    <title>Singapore - Coin Collection</title>    
+    <link rel="shortcut icon" href="https://i.imgur.com/SSkeKDJ.png">
+
 </head>
 
 <body>
