--- a/South Afrika/sa.html
+++ b/South Afrika/sa.html
@@ -4,6 +4,8 @@
 <head>
     <link rel="stylesheet" href="../style.css">
     <title>South Africa - Coin Collection</title>
+        <link rel="shortcut icon" href="https://i.imgur.com/SSkeKDJ.png">
+
 </head>
 
 <body>
