--- a/UAE/uae.html
+++ b/UAE/uae.html
@@ -4,6 +4,8 @@
 <head>
     <link rel="stylesheet" href="../style.css">
     <title>United Arab Emirates - Coin Collection</title>
+        <link rel="shortcut icon" href="https://i.imgur.com/SSkeKDJ.png">
+
 </head>
 
 <body>
