--- a/USA/usa.html
+++ b/USA/usa.html
@@ -4,6 +4,8 @@
 <head>
     <link rel="stylesheet" href="../style.css">
     <title>United States of America - Coin Collection</title>
+        <link rel="shortcut icon" href="https://i.imgur.com/SSkeKDJ.png">
+
 
 </head>
 
