--- a/immersiveCoinPage.html
+++ b/immersiveCoinPage.html
@@ -7,6 +7,8 @@
     <title>Coins by country</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
+        <link rel="shortcut icon" href="https://i.imgur.com/SSkeKDJ.png">
+
 </head>
 
 
