--- a/countriesGrid.html
+++ b/countriesGrid.html
@@ -5,6 +5,8 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel="stylesheet" href="https://cdn.metroui.org.ua/v4/css/metro-all.min.css">
     <script src="https://cdn.metroui.org.ua/v4/js/metro.min.js"></script>
+        <link rel="shortcut icon" href="https://i.imgur.com/SSkeKDJ.png">
+
 </head>
 <style>
     body {
