--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
 <meta http-equiv="refresh" content="0; URL='welcome.html'" />
+    <link rel="shortcut icon" href="https://i.imgur.com/SSkeKDJ.png">
+
