--- a/welcome.html
+++ b/welcome.html
@@ -3,6 +3,8 @@
 
 <head>
     <title>Welcome to Coiner</title>
+        <link rel="shortcut icon" href="https://i.imgur.com/SSkeKDJ.png">
+
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Abel&family=Krona+One&family=Mulish:wght@300&display=swap');
 
